--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     
+    <div class="quiz-container">
+            <h3>Question Text</h3>
+        <ul>
+            <li><input type="radio" id="a" name="answer"><label for="a">Question</label></li>
+            <li><input type="radio" id="b" name="answer"><label for="b">Question</label></li>
+            <li><input type="radio" id="c" name="answer"><label for="c">Question</label></li>
+            <li><input type="radio" id="d" name="answer"><label for="d">Question</label></li>
+        </ul>
+        <button>Submit</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
